[styleguide] Update style guide pages - Add info about SASS utilis (mixing, functions).

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/styleguide.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/styleguide.html
@@ -94,6 +94,11 @@ Component used to showcase different UI Elements
       padding: 1rem;
     }
 
+    .sg-list--no-bullets {
+      list-style-type: none;
+      padding: 0;
+    }
+
     .sg-caption {
       color: #98A4AE;
       font-size: 14px;
