Simplify Main CSS Class - Category highlight component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/category-highlight/static_category-highlight.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/category-highlight/static_category-highlight.html
@@ -2,13 +2,13 @@
   <div class="alert alert-info">Category Highlight Component</div>
 </sly>
 
-<div class="eaton-category-highlight">
+<div class="category-highlight">
 
-  <div class="eaton-category-highlight__top">
+  <div class="category-highlight__top">
     <sly data-sly-resource="${'ttil' @ resourceType='eaton/static-components/content/ttil'}"></sly>
   </div>
 
-  <div class="eaton-category-highlight__bottom">
+  <div class="category-highlight__bottom">
     <sly data-sly-resource="${'list' @ resourceType='eaton/static-components/content/list'}"></sly>
   </div>
 
