[EATON-444] Add icons for social Networks - WIP

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/social-links/static_social-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/social-links/static_social-links.html
@@ -20,6 +20,7 @@
     >
       <li class="eaton-social-links__list-item">
         <a href="${ item.url }"
+          aria-label="${ item.title }"
           class="eaton-social-links__list-link"
           target="${ item.target }"
         >
@@ -37,7 +38,7 @@
         class="eaton-social-links__page-link b-body-copy-small"
         target="${ data.pageLink.target }">
         <span class="eaton-social-links__page-link-text">${ data.pageLink.title }</span>
-        <i class="eaton-social-links__page-link-icon glyphicon glyphicon-menu-right"
+        <i class="eaton-social-links__page-link-icon icon icon-chevron-right"
           aria-hidden="true"></i>
       </a>
     </div>
