Update Main container from <div> to <main> tag - accessibility / semantics

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-content-page/body.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-content-page/body.html
@@ -5,9 +5,9 @@
 </header>
 
 <!--/* Include Page Content */-->
-<div class="container-full">
-    <sly data-sly-resource="${'par' @ resourceType='wcm/foundation/components/parsys'}"></sly>
-</div>
+<main class="container-full">
+  <sly data-sly-resource="${'par' @ resourceType='wcm/foundation/components/parsys'}"></sly>
+</main>
 
 <!--/* Include Footer Component */-->
 <footer data-sly-test="${properties.testdata != 'no-header-no-footer'}">
