--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-home-page/body.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-home-page/body.html
@@ -1,3 +1,3 @@
-<div class="container-full">
-    <sly data-sly-resource="${'par' @ resourceType='wcm/foundation/components/parsys'}"></sly>
-</div>
+<main class="container-full">
+  <sly data-sly-resource="${'par' @ resourceType='wcm/foundation/components/parsys'}"></sly>
+</main>
