refactor tile links

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/static_icon-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/static_icon-list.html
@@ -25,3 +25,8 @@
 <sly data-sly-test="${properties.view == 'top-list-with-icon'}">
     <sly data-sly-include="views/view-top-list-with-icon.html"></sly>
 </sly>
+
+<sly data-sly-test="${properties.view == 'tile-links'}">
+    <sly data-sly-include="views/view-tile-links.html"></sly>
+</sly>
+
