EATON-88: added back to top componet

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
@@ -61,4 +61,11 @@
     </div>
   </div>
 
+  <!--/* Footer: Back to top */-->
+  <div class="eaton-footer-back-to-top"
+       data-scroll-to="header"
+       aria-label="Back to top of the page" >
+    <span class="icon icon-chevron-down"></span>
+  </div>
+
 </div>
