adding quote view on TTIL list

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/static_title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/static_title-text-image-link-list.html
@@ -27,3 +27,6 @@
 <sly data-sly-test="${properties.view == 'featured-list'}">
     <sly data-sly-include="views/view-featured-list.html"></sly>
 </sly>
+<sly data-sly-test="${properties.view == 'quote'}">
+    <sly data-sly-include="views/view-quotes.html"></sly>
+</sly>
