[EATON-467] Faceted Navigation - cleanup / refactor WIP

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-specifications/static_product-specifications.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-specifications/static_product-specifications.html
@@ -15,14 +15,14 @@
             <ul class="module-anchor-links__list">
               <sly data-sly-list="${ data.anchors }">
                 <li class="module-anchor-links__list-item b-body-copy-small">
-                  <!--/* NOTE: data-scroll-to="#element-id" is a CSS Selector (Class, ID) */-->
+                  <!--/* NOTE: data-scroll-to="#element-id" is a CSS Selector (Element, Class, ID) */-->
                   <button
                     data-scroll-to="#${ item.anchorId }"
                     data-scroll-to-offset-enabled="true"
                     class="module-anchor-links__list-link button--reset">
-                      <span>${ item.anchorTitle }</span>
-                      <i class="icon icon-chevron-right" aria-hidden="true"></i>
-                    </button>
+                    <span>${ item.anchorTitle }</span>
+                    <i class="icon icon-chevron-right" aria-hidden="true"></i>
+                  </button>
                 </li>
               </sly>
             </ul>
