[Eaton-314] CTA (Link View) - Initial markup + Data (Based on Mega Menu)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/cta/static_cta.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/cta/static_cta.html
@@ -4,6 +4,7 @@
 
 	Author may select one of the following views
 	- default
+  -link
 
 
 */-->
@@ -16,4 +17,8 @@
 
 <sly data-sly-test="${ properties.view == 'default' }">
   <sly data-sly-include="views/view-default.html" data-sly-unwrap></sly>
+</sly>
+
+<sly data-sly-test="${ properties.view == 'link' }">
+  <sly data-sly-include="views/view-link.html" data-sly-unwrap></sly>
 </sly>
