EATON-89 - code update after handoff

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/cookie-acceptance/static_cookie-acceptance.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/cookie-acceptance/static_cookie-acceptance.html
@@ -21,7 +21,7 @@
 
 
             <div class="col-sm-12 col-md-3 text-center">
-              <a href="${data.link.url}" class="b-button b-button__secondary b-button__secondary--dark cookie-acceptancebox__cta" role="button" target="${data.link.target}">${data.link.title}</a>
+              <button class="b-button b-button__secondary b-button__secondary--dark cookie-acceptancebox__cta" role="button"}">${data.button.title}</a>
             </div>
           </div>
         </div>
