add styling to form

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/form/form.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/form/form.html
@@ -32,7 +32,7 @@
                     <label class="label" >
                         This Label is needed for 2 column to work
                     </label>
-                    <div class="_50 field-style" >
+                    <div class="_50_left field-style" >
                         <p class="field-p" >
                             <label for="field1_0" class="label-position top " >
                                 First name
@@ -131,7 +131,7 @@
                             <label for="field5" class="label-position top " >
                                 Company name
                             </label>
-                            <input id="field5" name="company" type="text" value="<eloqua type='emailfield' syntax='Company11' />" class="field-size-top-large"  />
+                            <input id="field5" name="company" type="text" class="field-size-top-large"  />
                         </p>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                             <label for="field6_0" class="label-position top " >
                                 Address 1
                             </label>
-                            <input id="field6_0" name="address1" type="text" value="<eloqua type='emailfield' syntax='Address1' />" class="field-size-top-large"  />
+                            <input id="field6_0" name="address1" type="text" class="field-size-top-large"  />
                         </p>
                     </div>
                     <div class="_100 field-style" >
@@ -156,7 +156,7 @@
                             <label for="field6_1" class="label-position top " >
                                 Address 2
                             </label>
-                            <input id="field6_1" name="address2" type="text" value="<eloqua type='emailfield' syntax='Address2' />" class="field-size-top-large"  />
+                            <input id="field6_1" name="address2" type="text" class="field-size-top-large"  />
                         </p>
                     </div>
                     <div class="_50_left field-style" >
@@ -164,7 +164,7 @@
                             <label for="field6_2" class="label-position top " >
                                 City
                             </label>
-                            <input id="field6_2" name="city" type="text" value="<eloqua type='emailfield' syntax='City' />" class="field-size-top-large"  />
+                            <input id="field6_2" name="city" type="text" class="field-size-top-large"  />
                         </p>
                     </div>
                     <div class="_50 field-style" >
@@ -172,7 +172,7 @@
                             <label for="field6_3" class="label-position top " >
                                 State or Province
                             </label>
-                            <input id="field6_3" name="stateProv" type="text" value="<eloqua type='emailfield' syntax='State' />" class="field-size-top-large"  />
+                            <input id="field6_3" name="stateProv" type="text" class="field-size-top-large"  />
                         </p>
                     </div>
                     <div class="_50_left field-style" >
@@ -180,7 +180,7 @@
                             <label for="field6_4" class="label-position top " >
                                 Zip or Postal Code
                             </label>
-                            <input id="field6_4" name="zipPostal" type="text" value="<eloqua type='emailfield' syntax='Zip' />" class="field-size-top-large"  />
+                            <input id="field6_4" name="zipPostal" type="text" class="field-size-top-large"  />
                         </p>
                     </div>
                     <div class="_50 field-style" >
@@ -188,7 +188,7 @@
                             <label for="field6_5" class="label-position top " >
                                 Country
                             </label>
-                            <input id="field6_5" name="country" type="text" value="<eloqua type='emailfield' syntax='Country' />" class="field-size-top-large"  />
+                            <input id="field6_5" name="country" type="text" class="field-size-top-large"  />
                         </p>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                     <label class="label" >
                         Another 2 Column
                     </label>
-                    <div class="_50 field-style" >
+                    <div class="_50_left field-style" >
                         <p class="field-p" >
                             <label for="field7_0" class="label-position top " >
                                 Phone
