add checkmark icon

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/form/form.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/form/form.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="field-group large" >
                     <label class="label" >
-                        This Label is needed for 2 column to work
+                        This Label is needed for 2 column
                     </label>
                     <div class="_50_left field-style" >
                         <p class="field-p" >
@@ -220,6 +220,87 @@
                             <label class="instructions default other" >
                                 You will be sent a validation email
                             </label>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div id="formElement3" class="sc-view form-design-field sc-static-layout item-padding sc-regular-size" >
+                <div class="field-wrapper" >
+                </div>
+                <div class="individual field-wrapper" >
+                    <div class="_100 field-style" >
+                        <p class="field-p" >
+                            <label for="field3" class="label-position top " >
+                                Multiple Picklist
+                            </label>
+                            <select id="field3" name="multipleSelectMenu" multiple="multiple" class="field-size-top-large" >
+                                <option value="" selected="selected" >
+                                    Please Select
+                                </option>
+                                <option value="Petrochemical" >
+                                    Petrochemical
+                                </option>
+                                <option value="Steel" >
+                                    Steel
+                                </option>
+                                <option value="Non-Ferrous" >
+                                    Non-Ferrous
+                                </option>
+                                <option value="Mining" >
+                                    Mining
+                                </option>
+                                <option value="Thermal Power Plt." >
+                                    Thermal Power Plt.
+                                </option>
+                                <option value="Hyd. Power Plt." >
+                                    Hyd. Power Plt.
+                                </option>
+                                <option value="Nuclear Power" >
+                                    Nuclear Power
+                                </option>
+                                <option value="Wind Power & Solar" >
+                                    Wind Power &amp; Solar
+                                </option>
+                                <option value="Cement" >
+                                    Cement
+                                </option>
+                                <option value="Papermaking" >
+                                    Papermaking
+                                </option>
+                                <option value="Marine" >
+                                    Marine
+                                </option>
+                                <option value="Vehicles Manuf." >
+                                    Vehicles Manuf.
+                                </option>
+                                <option value="Province PSB" >
+                                    Province PSB
+                                </option>
+                                <option value="Housing" >
+                                    Housing
+                                </option>
+                                <option value="Building" >
+                                    Building
+                                </option>
+                                <option value="Hotels" >
+                                    Hotels
+                                </option>
+                                <option value="Hospital" >
+                                    Hospital
+                                </option>
+                                <option value="School" >
+                                    School
+                                </option>
+                                <option value="Data Center" >
+                                    Data Center
+                                </option>
+                                <option value="Airport" >
+                                    Airport
+                                </option>
+                                <option value="Port" >
+                                    Port
+                                </option>
+                            </select>
                         </p>
                     </div>
                 </div>
