--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
@@ -45,7 +45,7 @@
 							<a class="b-body-copy" href="${tab.headerlink}" title="${tab.headertext}" target="${tab.headertarget}">${tab.headertext}</a>
 						</div>
 						<div class="col-xs-12 col-md-9 eaton-tabbed-menu-list__tab-links">
-							<div class="row">
+							<div>
 								<sly data-sly-list.link="${tab.links}">
 									<div class="col-xs-12 col-md-4">
 										<a class="b-body-copy-small" href="${link.link}" title="${link.text}" target="${link.target}">${link.text}</a>
