--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-family-card/static_product-family-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-family-card/static_product-family-card.html
@@ -16,8 +16,12 @@
           <div class="eaton-product-family-card__separator"></div>
           <div class="eaton-product-family-card__description b-body-copy">${data.description}</div>
         </div>
-        <div class="col-xs-12 col-md-4 eaton-product-family-card__image-wrapper rendition">
-          <img data-src="${data.imageSrcMobile}" data-mobile-rendition="${data.imageSrcMobile}" data-tablet-rendition="${data.imageSrcMobile}" data-desktop-rendition="${data.imageSrcDesktop}" alt="${data.imageAlt}">
+        <div class="col-xs-12 col-md-4 eaton-product-family-card__image-wrapper">
+          <!-- Start: Rendition Image Component -->
+          <sly data-sly-use.tpl="../../shared/templates/rendition-image.html">
+            <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
+          </sly>
+          <!-- End: Rendition Image Component -->
         </div>
       </div>
 
