--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
@@ -21,3 +21,8 @@
 <sly data-sly-test="${properties.view == 'related-products'}">
     <sly data-sly-include="views/view-related-products.html"></sly>
 </sly>
+
+
+<sly data-sly-test="${properties.view == 'text-only-2-column'}">
+    <sly data-sly-include="views/view-text-only-2-column.html"></sly>
+</sly>
