--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/styleguide.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/styleguide.html
@@ -53,8 +53,10 @@ Component used to showcase different UI Elements
       </sly>
 
       <!--/* Section: Glyphicon-Font */-->
-      <sly data-sly-use.tpl="partials/styleguide-glyphicon-font.html">
-        <sly data-sly-call="${ tpl.section @ data=data.glyphiconFont }"></sly>
+      <sly data-sly-use.glyphicons="${ 'data/glyphicons-data.js' }">
+        <sly data-sly-use.tpl="partials/styleguide-glyphicon-font.html">
+          <sly data-sly-call="${ tpl.section @ data=glyphicons }"></sly>
+        </sly>
       </sly>
 
     </div>
