fix select element of form

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/form/form.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/form/form.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container eaton-form-container">
     <div class="eaton-form">
         <form method="post" name="SR_TestForm_ForStyling" action="https://s1975530148.t.eloqua.com/e/f2" onsubmit="setTimeout(function(){if(document.querySelector){var s=document.querySelector('form#form2955 input[type=submit]');if(s){s.disabled=true;}}},100);return true;" id="form2955" class="elq-form" >
             <input value="SR_TestForm_ForStyling" type="hidden" name="elqFormName"  />
