[m67] Responsive Table - Add option in the data model for MaxAllowedColumns

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/responsive-table/static_responsive-table.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/responsive-table/static_responsive-table.html
@@ -42,7 +42,8 @@
               <!--/*
                 NOTE: This component only supports 6 Columns MAX (The Label Column + Other 5 Columns)
               */-->
-              <div class="responsive-table__group-item" data-sly-test="${ columnList.count < 6 }">
+              <div class="responsive-table__group-item"
+                data-sly-test="${ columnList.count < data.maxAllowedColumns }">
                 <div class="responsive-table__cell responsive-table--visible-mobile">${ data.tableHeader.columns[ columnList.index ] }</div>
                 <div class="responsive-table__cell">${ column }</div>
               </div>
