[m65] - cookie acceptance component moved to the header component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -1,5 +1,11 @@
 <sly data-sly-use.header="data/header-data.js">
     <div class="eaton-header">
+
+        <!--/* Include: Cookie Acceptance */*/-->
+        <div data-sly-unwrap="${!wcmmode.edit}">
+          <sly data-sly-resource="${'cookie-acceptance' @ resourceType='eaton/static-components/structure/cookie-acceptance'}"></sly>
+        </div>
+
         <!--/* Include: Full Page Drawer */*/-->
         <div data-sly-unwrap="${!wcmmode.edit}">
           <sly data-sly-resource="${'full-page-drawer' @ resourceType='eaton/static-components/structure/full-page-drawer'}"></sly>
