[HOTFIX] Update paths to Sightly Template Files - (Fixes issues when some template files load other template files)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/media-gallery/static_media-gallery.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/media-gallery/static_media-gallery.html
@@ -7,7 +7,7 @@
   <div class="eaton-media-gallery">
 
     <!--/* M-48: Media Gallery */-->
-    <sly data-sly-use.tpl="../../shared/templates/module-media-gallery.html">
+    <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-media-gallery.html">
       <sly data-sly-call="${ tpl.module @ data=viewData }"></sly>
     </sly>
 
