--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
@@ -8,13 +8,13 @@
   <div class="eaton-product-detail-card">
 
     <!--/* M-35: Product Detail Card */-->
-    <sly data-sly-use.tpl="../../shared/templates/module-product-detail-card.html">
+    <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-product-detail-card.html">
       <sly data-sly-call="${ tpl.module @ data=viewData.productDetailCard }"></sly>
     </sly>
 
 
     <!--/* M-48: Media Gallery */-->
-    <sly data-sly-use.tpl="../../shared/templates/module-media-gallery.html">
+    <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-media-gallery.html">
       <sly data-sly-call="${ tpl.module @ data=viewData.mediaGallery }"></sly>
     </sly>
 
@@ -23,7 +23,7 @@
     <!--/* NOTE: It should behave as an Upsell Component: Carousel starts after 3 items */-->
     <div class="eaton-product-detail-card__related-products">
       <div class="container">
-        <sly data-sly-use.tpl="../../shared/templates/module-upsell-products.html">
+        <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-upsell-products.html">
           <sly data-sly-call="${ tpl.module @ data=viewData.relatedProducts.items }"></sly>
         </sly>
       </div>
