--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-family-card/static_product-family-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-family-card/static_product-family-card.html
@@ -18,7 +18,7 @@
         </div>
         <div class="col-xs-12 col-md-4 eaton-product-family-card__image-wrapper">
           <!-- Start: Rendition Image Component -->
-          <sly data-sly-use.tpl="../../shared/templates/rendition-image.html">
+          <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
             <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
           </sly>
           <!-- End: Rendition Image Component -->
