--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/static_product-grid.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/static_product-grid.html
@@ -16,7 +16,7 @@
       <!--/* Results Header */-->
       <div class="row">
         <div class="col-xs-12">
-          <sly data-sly-use.tpl="../../shared/templates/module-faceted-navigation/faceted-navigation-header.html">
+          <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html">
             <sly data-sly-call="${ tpl.module @ data=data.search }"></sly>
           </sly>
         </div>
@@ -27,7 +27,7 @@
 
         <!--/* M-62: Faceted Navigation */-->
         <div class="col-xs-12 col-md-3">
-          <sly data-sly-use.tpl="../../shared/templates/module-faceted-navigation/faceted-navigation.html">
+          <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation.html">
             <sly data-sly-call="${ tpl.module @ data=data.facets, search=data.search }"></sly>
           </sly>
         </div>
