--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs/static_product-tabs-family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs/static_product-tabs-family.html
@@ -5,13 +5,13 @@
 <sly data-sly-use.viewData="${'data/product-tabs-family-data.js' @testdata=properties.testdata}">
 
   <sly data-sly-test="${ properties.view == 'links-navigation' }">
-    <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
+    <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-product-tab.html">
       <sly data-sly-call="${ tpl.data @ data=viewData }"></sly>
     </sly>
   </sly>
 
   <sly data-sly-test="${ properties.view == 'toggle-graphic' }">
-    <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
+    <sly data-sly-use.tpl="eaton/static-components/shared/templates/module-product-tab.html">
       <sly data-sly-call="${ tpl.data @ data=viewData }"></sly>
     </sly>
   </sly>
