--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/quote/static_quote.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/quote/static_quote.html
@@ -3,7 +3,7 @@
 </sly>
 
 
-<sly data-sly-use.data="data/quote-data.js">
+<sly data-sly-use.data="${'data/quote-data.js' @testdata=properties.testdata}">
 
   <div class="eaton-quote text-center">
     <div class="container">
