EATON-252 Image-Component: Data + Add Image rendition template

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/image/static_image.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/image/static_image.html
@@ -11,7 +11,11 @@
 <sly data-sly-use.data="data/image-data.js">
   <div class="eaton-image">
     <div class="${properties.toggleInnerGrid ? 'container' : ''} eaton-image__container">
-      Image goes here
+      <!-- Start: Rendition Image Component -->
+      <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+        <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
+      </sly>
+      <!-- End: Rendition Image Component -->
     </div>
   </div>
 </sly>
