[Footer] Update back-to-top icon

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
@@ -65,7 +65,7 @@
   <div class="eaton-footer-back-to-top"
        data-scroll-to="header"
        aria-label="Back to top of the page" >
-    <span class="icon icon-chevron-down"></span>
+    <span class="icon icon-chevron-up"></span>
   </div>
 
 </div>
