--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/static_product-grid.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/static_product-grid.html
@@ -9,7 +9,7 @@
   <div class="product-grid-results ${
     properties.view == 'product-card-sku'
       ? 'product-grid-results--sku'
-      : 'product-grid-results--family'
+      : 'product-grid-results--subcategory'
     }">
     <div class="container">
 
@@ -38,14 +38,14 @@
           <!--/* View: Card-SKU */-->
           <sly data-sly-test.isViewSKU="${ properties.view == 'product-card-sku' }">
             <sly data-sly-use.tpl="views/product-card-sku.html">
-              <sly data-sly-call="${ tpl.view @ data=data.search }"></sly>
+              <sly data-sly-call="${ tpl.view @ data=data.search, results=data.sku.searchResults }"></sly>
             </sly>
           </sly>
 
-          <!--/* View: Card-Family */-->
+          <!--/* View: Card-Subcategory */-->
           <sly data-sly-test="${ !isViewSKU }">
-            <sly data-sly-use.tpl="views/product-card-family.html">
-              <sly data-sly-call="${ tpl.view @ data=data.search }"></sly>
+            <sly data-sly-use.tpl="views/product-card-subcategory.html">
+              <sly data-sly-call="${ tpl.view @ data=data.search, results=data.subcategory.searchResults }"></sly>
             </sly>
           </sly>
 
