[EATON-81][EATON-474] Add renditions and image mask to TTIL-LandingHero + Cleanup - remove unnecessary view "landing-hero-single"

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/ttil-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/ttil-list.html
@@ -2,4 +2,4 @@
 <!-- Integrated code goes here -->
 
 
-<sly data-sly-include="static_title-text-image-link-list.html"></sly>
+<sly data-sly-include="static_ttil-list.html"></sly>
