--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/static_ttil-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/static_ttil-list.html
@@ -3,9 +3,7 @@
 </sly>
 
 <sly data-sly-test="${properties.view == 'landing-hero'}">
-    <div data-sly-use.lib="views/view-landing-hero.html" data-sly-use.data = "${'../data/view-landing-hero-multiple-data.js' @testdata=properties.testdata}">
-		<div data-sly-call="${lib.multiple @ param=data}"></div>
-	</div>
+  <sly data-sly-include="views/view-landing-hero.html"></sly>
 </sly>
 <sly data-sly-test="${properties.view == 'featured-story'}">
     <sly data-sly-include="views/view-featured-story.html"></sly>
@@ -15,11 +13,6 @@
 </sly>
 <sly data-sly-test="${properties.view == 'category-hero'}">
     <sly data-sly-include="views/view-category-hero.html"></sly>
-</sly>
-<sly data-sly-test="${properties.view == 'landing-hero-single'}" >
-	<div data-sly-use.lib="views/view-landing-hero.html" data-sly-use.data = "${'../data/view-landing-hero-single-data.js' @testdata=properties.testdata}">
-		<div data-sly-call="${lib.single @param=data}"></div>
-	</div>
 </sly>
 <sly data-sly-test="${properties.view == 'image-only'}">
     <sly data-sly-include="views/view-image-only.html"></sly>
