[EATON-536] FIX - Link List and Copyright Alignment [ALM-107]

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
@@ -55,7 +55,7 @@
             <!--/* Component: LinkList */-->
             <sly data-sly-resource="${'link-list-bottom' @ resourceType='/apps/eaton/static-components/general/link-list'}"></sly>
           </div>
-          <div class="eaton-footer-bottom__copyright"> ${ data.bottom.copyright } </div>
+          <div class="eaton-footer-bottom__copyright b-body-copy-small"> ${ data.bottom.copyright } </div>
         </div>
       </div>
     </div>
