--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/breadcrumb/static_breadcrumb.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/breadcrumb/static_breadcrumb.html
@@ -50,6 +50,7 @@
           <sly data-sly-test="${linkList.index == 1}">
             <li class="eaton-breadcrumb__list-item" >
               <span>...</span>
+              <i class="icon icon-chevron-right"></i>
             </li>
           </sly>
           <sly data-sly-test="${linkList.index >= data.grandparentIndex}">
