--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -16,8 +16,10 @@
                     <div class="header-utility-nav__toggle-selector">
                         <a href="#" class="open-country-selector">
                             <i class="icon icon-globe" aria-hidden="true"></i>
-                            <span class='header-utility-nav__country'>${header.defaultLabels.country}</span>
-                            <span class='header-utility-nav__language'>${header.defaultLabels.language}</span>
+                            <div class="header-utility-nav__label">
+                              <span class='header-utility-nav__country'>${header.defaultLabels.country}</span>
+                              <span class='header-utility-nav__language'>${header.defaultLabels.language}</span>
+                            </div>
                             <i class="icon icon-chevron-down" aria-hidden="true"></i>
                         </a>
                     </div>
